# cpp_quickreference

./: .gitignore  CMakeLists.txt  README.md  boost_datetime.cpp  conanfile.txt  const_example.cpp  cpp11_class.cpp  cpp11_thread.cpp  file_io.cpp  fmt_hello.cpp  gsl_hello.cpp  main.cpp  main1.cpp  omp_hello.cpp  omp_version.cpp  pattern_observer.cpp  pattern_singleton.cpp  pattern_strategy.cpp  strategy_pattern.cpp  string_token.cpp  weak_semaphore.cpp  xtensor_hello.cpp
abseil/: CMakeLists.txt  absl_container.cpp  string_view.cpp
boost/: CMakeLists.txt  boost_datetime.cpp  boost_version.cpp
cpp_lib/: CMakeLists.txt  hello.cpp  main.cpp  mylib.h
cpp_lib/module/: CMakeLists.txt  main.cpp
cpp_lib/shared/: CMakeLists.txt  main.cpp
cpp_lib/static/: CMakeLists.txt  hello.cpp  mylib.h  world.cpp
cpp_parallel/: CMakeLists.txt
cpp_util/: CMakeLists.txt  time_duration.cpp
csv-parser/: CMakeLists.txt  README.md  csv.h  csv_parser_hello.cpp  ram.csv
design_pattern/: CMakeLists.txt  strategy_pattern.cpp
fmt/: CMakeLists.txt  fmt_hello.cpp
json/: CMakeLists.txt  nlohmann_json_hello.cpp
openmp/: CMakeLists.txt  omp_hello.cpp
pcre2/: CMakeLists.txt  pcre2_hello.cpp
poco/: CMakeLists.txt  LibraryLoaderTest.cpp  TestLibrary.cpp  poco_hello.cpp
pprint/: CMakeLists.txt  pprint_hello.cpp
spdlog/: CMakeLists.txt  spdlog_hello.cpp
xtensor/: CMakeLists.txt  xtensor_hello.cpp
