cmake_minimum_required(VERSION 3.8)
project(cpp_quickreference)

# examples
add_subdirectory(boost)
add_subdirectory(fmt)
add_subdirectory(xtensor)
add_subdirectory(openmp)
add_subdirectory(design_pattern)
add_subdirectory(spdlog)
add_subdirectory(pprint)
add_subdirectory(csv-parser)
add_subdirectory(cpp_util)
add_subdirectory(pcre2)
add_subdirectory(abseil)
add_subdirectory(json)